--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <h1>Book Appointment</h1>
   <label form="details">Patient Details</label><hr>
   <form id="details" name="p_details" onsubmit="patientDetails(event)">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="p_name"><br><br>
+ <label for="name">Name:</label>
+<input type="text" id="name" name="p_name"><br><br>
+<label for="age">Age:</label>
+<input type="number" id="age" name="p_age"><br><br>
 <label for="email">Email:</label>
 <input type="email" id="email" name="p_email"><br><br>
 <label for="phone">Phone Number:</label>
