--- a/fruitShop.html
+++ b/fruitShop.html
@@ -21,5 +21,5 @@
     </div>
     <div id="thanks"></div>
   </body>
-  <script src="index.js"></script>
+  <script src="fruitshop.js"></script>
 </html>
